--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib",
   "scripts": {
     "test": "node ./ci/test.js",
-    "prepare": "node ./ci/build.js && node ./ci/shim.js && node ./ci/doc.js"
+    "prepare": "node ./ci/build.js && node ./ci/shim.js && node ./ci/doc.js && node ./ci/assets.js"
   },
   "repository": "realglobe-Inc/pon-timer",
   "keywords": [
@@ -36,6 +36,7 @@
     "ape-updating": "^4.1.0",
     "coz": "^6.0.20",
     "injectmock": "^2.0.0",
+    "pon-assets": "^1.1.2",
     "sg-templates": "^1.4.4",
     "stringcase": "^3.2.1",
     "sugos-travis": "^2.0.7",
