--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pon-timer",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Timer for pon",
   "main": "lib",
   "scripts": {
@@ -22,28 +22,27 @@
   },
   "homepage": "https://github.com/realglobe-Inc/pon-timer#readme",
   "dependencies": {
-    "astimer": "^1.3.0",
-    "co": "^4.6.0"
+    "astimer": "^1.3.0"
   },
   "devDependencies": {
-    "ababel": "^2.0.1",
-    "ababel-es2015": "^2.0.1",
-    "amocha": "^2.0.0",
+    "ababel": "^4.0.8",
+    "amocha": "^5.0.0",
     "ape-formatting": "^1.0.2",
     "ape-releasing": "^4.0.4",
     "ape-tasking": "^4.0.9",
-    "ape-tmpl": "^5.0.20",
+    "ape-tmpl": "^6.0.10",
     "ape-updating": "^4.1.0",
-    "coz": "^6.0.20",
+    "co": "^4.6.0",
+    "coz": "^7.0.1",
     "injectmock": "^2.0.0",
     "pon-assets": "^1.1.2",
     "sg-templates": "^1.4.4",
-    "stringcase": "^3.2.1",
+    "stringcase": "^4.1.1",
     "sugos-travis": "^2.0.7",
     "writeout": "^2.1.0"
   },
   "engines": {
-    "node": ">=6",
-    "npm": ">=4"
+    "node": ">=8",
+    "npm": ">=5"
   }
 }
